syntax = "proto3";

package syft.core.node.common.action;

import "proto/core/common/common_object.proto";
import "proto/core/store/store_object.proto";
import "proto/core/io/address.proto";

message GetObjectAction {
  syft.core.common.UID id_at_location = 1;
  syft.core.io.Address address = 2;
  syft.core.io.Address reply_to = 3;
  bool delete_obj = 4;
}

message GetObjectResponseMessage {
  syft.core.store.StorableObject obj = 1;
  syft.core.io.Address address = 2;
}